# killswitchpaper

./: .gitignore  CLAUDE.md  DECISIONS.md  Dockerfile  Makefile  README.md  RUNNING.md  pyproject.toml
config/: controls.yaml  phases.yaml  sources.yaml
data/population/: ir_asn_classification.csv
docs/: data-layout.md
paper/: .gitignore  Makefile  main.tex  references.bib
paper/sections/: abstract.tex  conclusion.tex  discussion.tex  findings.tex  intro.tex  methods.tex  related_work.tex
src/analysis/: __main__.py  classification_agreement.py  compare_ribs_runs.py  controls.py  flap_gaps.py  inventory.py  ioda_health.py  joins.py  phase_breakdown.py  results_tex.py  ribs_health.py  series_comparison.py  states.py  threshold_calibration.py
src/bgp/: __main__.py  backfill.py  events.py  ribs.py  risfiles.py  stream.py
src/common/: cache.py  config.py  log.py  prefixmatch.py  rollup.py  timeutil.py
src/figures/: __main__.py  build.py  style.py
src/ioda/: __main__.py  client.py
src/population/: __main__.py  as2org.py  controls.py  (+2 more)
tests/: test_classification.py  test_classification_agreement.py  test_collector_guard.py  test_compare_ribs_runs.py  test_controls.py  test_d016_tagging.py  test_d020_degraded.py  test_delegation.py  test_events_streaming.py  test_flap_gaps.py  test_ioda_chunking.py  test_ioda_health.py  test_ioda_main.py  test_joins.py  test_phase_breakdown.py  test_prefixmatch.py  test_restoration.py  test_retry.py  test_risfiles.py  test_rollup.py  test_series_comparison.py  test_states.py  test_threshold_calibration.py  test_timeutil.py
(+2 files in other folders)
